# mini-compiler

./: README.md  mini-compiler.cabal  package.yaml  stack.yaml
c0_sample/: basics.c0  basics.l1  div_by_zero.l1  fibonacci.l1  flow_intercept.l1  no_decl.l1  no_init.l1  no_return.l1  number_error.c0  number_error.l1  operators.l1  pointer.c0  structs.c0
src/: CodeGen.hs  Compiler.hs  Lexer.hs  Liveness.hs  Main.hs  Parser.hs  RegAlloc.hs  SSA.hs  StaticCheck.hs
test/: LexerTest.hs  ParserTest.hs  Spec.hs  Test.hs  TestData.hs  TestUtils.hs
