cabal-version: 1.12

name:           mini-compiler
version:        0.1.0.0
synopsis:       Mini compiler from C0 to x86 ASM (for 15-411).
bug-reports:    https://github.com/davidmaamoaix/mini-compiler/issues
author:         David Ma
copyright:      2021 David Ma
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/davidmaamoaix/mini-compiler

executable compiler
  main-is:
    Main.hs
  other-modules:
    Parser
  hs-source-dirs:
    src
  build-depends:
    base >=4.7 && <5
  default-language: Haskell2010

test-suite mini-compiler-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
    src
  other-modules:
    Parser
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5
  default-language: Haskell2010
