cabal-version: 1.12

name:           mini-compiler
version:        0.1.0.0
synopsis:       Mini compiler from C0 to x86 ASM (for 15-411).
bug-reports:    https://github.com/davidmaamoaix/mini-compiler/issues
author:         David Ma
copyright:      2021 David Ma
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

    c0_sample/basics.l1
    c0_sample/div_by_zero.l1
    c0_sample/number_error.l1

source-repository head
  type: git
  location: https://github.com/davidmaamoaix/mini-compiler

executable compiler
  main-is:
    Main.hs
  other-modules:
    Lexer
    Parser
    AST
  hs-source-dirs:
    src
  build-depends:
    base >=4.7 && <5,
    parsec >=3.1,
    containers >=0.6
  default-language: Haskell2010

test-suite mini-compiler-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
    test
    src
  other-modules:
    Lexer
    Parser
    AST
    TestData
    ParserTest
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5,
    parsec >=3.1,
    containers >=0.6,
    HUnit
  default-language: Haskell2010
